--- a/src/style.css
+++ b/src/style.css
@@ -8,6 +8,12 @@ h1 {
   margin: 10px auto;
   text-align: center;
 }
+footer {
+  color: rgba(0, 0, 0, 0.7);
+  font-size: 12px;
+  margin: 4px;
+  text-align: center;
+}
 .container {
   border: 3px solid rgb(0, 0, 0);
   border-radius: 30px;
@@ -68,4 +74,12 @@ h1 {
 .weather-specs {
   font-size: 15px;
   color: rgba(0, 0, 0, 0.7);
+}
+.footer-link {
+  text-decoration: none;
+  color: rgba(0, 0, 0, 0.8);
+  font-weight: 500;
+}
+.footer-link:hover {
+  text-decoration: underline;
 }
