--- a/src/style.css
+++ b/src/style.css
@@ -1,5 +1,6 @@
 html {
   font-family: "Roboto", sans-serif;
+  background: rgba(0, 0, 0, 1);
 }
 
 h1 {
@@ -8,16 +9,22 @@ h1 {
   margin: 10px auto;
   text-align: center;
 }
+h3 {
+  font-size: 15px;
+  font-weight: 400;
+  margin: 0;
+  text-align: center;
+}
 footer {
-  color: rgba(0, 0, 0, 0.7);
+  color: rgba(255, 255, 255, 1);
   font-size: 12px;
   margin: 4px;
   text-align: center;
 }
 .container {
+  background: rgba(255, 255, 255, 1);
   border: 3px solid rgb(0, 0, 0);
   border-radius: 30px;
-  box-shadow: 0px 0px 2px 2px rgba(0, 0, 0, 0.1);
   display: block;
   margin: 0 auto;
   max-width: 300px;
@@ -77,8 +84,7 @@ footer {
 }
 .footer-link {
   text-decoration: none;
-  color: rgba(0, 0, 0, 0.8);
-  font-weight: 500;
+  color: rgba(255, 255, 255, 1);
 }
 .footer-link:hover {
   text-decoration: underline;
