Changed color scheme, changed app title

--- a/src/style.css
+++ b/src/style.css
@@ -1,4 +1,4 @@
-html {
+body {
   font-family: "Roboto", sans-serif;
   background: rgba(0, 0, 0, 1);
 }
@@ -16,13 +16,13 @@ h3 {
   text-align: center;
 }
 footer {
-  color: rgba(255, 255, 255, 1);
+  color: rgba(255, 255, 255, 0.7);
   font-size: 12px;
   margin: 4px;
   text-align: center;
 }
 .container {
-  background: rgba(255, 255, 255, 1);
+  background: rgb(248, 155, 50);
   border: 3px solid rgb(0, 0, 0);
   border-radius: 30px;
   display: block;
@@ -37,12 +37,17 @@ footer {
 #input-bar,
 #search-button,
 #location-button {
+  color: rgba(255, 255, 255, 1);
+  background: rgba(0, 0, 0, 1);
   padding: 3px;
   border: 3px solid rgb(0, 0, 0);
   border-radius: 30px;
 }
 #input-bar {
   padding: 5px;
+}
+::placeholder {
+  color: rgba(255, 255, 255, 0.8);
 }
 #temp-now {
   text-align: center;
@@ -67,7 +72,7 @@ footer {
 }
 #main-icon {
   display: block;
-  margin: 5px auto;
+  margin: 0 auto;
   width: 30%;
 }
 #weather-desc {
@@ -75,16 +80,17 @@ footer {
   text-align: center;
 }
 #weather-specs-wrapper {
-  margin: 20px auto;
+  margin: 10px auto;
   text-align: center;
 }
 .weather-specs {
   font-size: 15px;
-  color: rgba(0, 0, 0, 0.7);
+  color: rgba(0, 0, 0, 1);
 }
 .footer-link {
   text-decoration: none;
-  color: rgba(255, 255, 255, 1);
+  color: rgba(255, 255, 255, 0.8);
+  font-weight: 500;
 }
 .footer-link:hover {
   text-decoration: underline;
