--- a/src/style.css
+++ b/src/style.css
@@ -39,6 +39,7 @@ footer {
 #input-bar {
   background: transparent;
   padding: 5px;
+  margin-right: 5px;
   border: 3px solid rgb(0, 0, 0);
   border-radius: 30px;
 }
@@ -56,10 +57,13 @@ footer {
 #temp-now {
   text-align: center;
 }
-#temp-digits {
+#temp-digits,
+#degree-sign {
   font-size: 65px;
   font-weight: 400;
+  margin-right: -5px;
 }
+
 #temp-units {
   font-size: 28px;
   position: relative;
