--- a/src/style.css
+++ b/src/style.css
@@ -10,8 +10,8 @@ h1 {
 }
 h3 {
   font-size: 15px;
-  font-weight: 400;
-  margin: 0;
+  font-weight: 300;
+  margin: 10px auto;
   text-align: center;
 }
 form {
