--- a/src/style.css
+++ b/src/style.css
@@ -20,7 +20,7 @@ form {
 footer {
   color: rgba(0, 0, 0, 0.7);
   font-size: 12px;
-  margin: 4px;
+  margin: 6px;
   text-align: center;
 }
 .app-wrapper {
@@ -37,7 +37,7 @@ footer {
 }
 
 #input-bar {
-  background: transparent;
+  background: rgb(242, 242, 241);
   padding: 5px;
   margin-right: 5px;
   border: 3px solid rgb(0, 0, 0);
@@ -82,6 +82,7 @@ footer {
   display: block;
   margin: 0 auto;
   width: 30%;
+  filter: drop-shadow(0 0 2px rgba(0, 0, 0, 0.7));
 }
 #weather-desc {
   font-size: 35px;
