--- a/src/style.css
+++ b/src/style.css
@@ -157,8 +157,10 @@ footer {
 }
 .week-temp {
   padding-left: 0;
-  font-weight: 900;
   position: relative;
   left: -8px;
   text-align: center;
+}
+.temp-hi {
+  font-weight: 900;
 }
